--- a/3_데이터_분석과제.ipynb
+++ b/3_데이터_분석과제.ipynb
@@ -1772,7 +1772,8 @@
     }
    ],
    "source": [
-    "for name in (k := ['강간', '강도', '살인', '절도', '폭력', '소계']):\n",
+    "k = ['강간', '강도', '살인', '절도', '폭력', '소계']\n",
+    "for name in k:\n",
     "    if name == '소계': df['검거율'] = df[name+'(검거)'] / df[name+'(발생)'] * 100\n",
     "    else: df[name+'검거율'] = df[name+'(검거)'] / df[name+'(발생)'] * 100\n",
     "\n",
